// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`unityblocks/accordion-item should render with background color 1`] = `
"<!-- wp:unityblocks/accordion-item {\\"backgroundColor\\":\\"#111111\\"} -->
<div class=\\"wp-block-unityblocks-accordion-item\\"></div>
<!-- /wp:unityblocks/accordion-item -->"
`;

exports[`unityblocks/accordion-item should render with content 1`] = `
"<!-- wp:unityblocks/accordion-item {\\"title\\":\\"Accordion title\\"} -->
<div class=\\"wp-block-unityblocks-accordion-item\\"><details><summary class=\\"wp-block-unityblocks-accordion-item__title\\">Accordion title</summary><div class=\\"wp-block-unityblocks-accordion-item__content\\"></div></details></div>
<!-- /wp:unityblocks/accordion-item -->"
`;

exports[`unityblocks/accordion-item should render with custom background color 1`] = `
"<!-- wp:unityblocks/accordion-item {\\"title\\":\\"Accordion Item title\\",\\"customBackgroundColor\\":\\"#111111\\"} -->
<div class=\\"wp-block-unityblocks-accordion-item\\"><details><summary class=\\"wp-block-unityblocks-accordion-item__title has-background\\" style=\\"background-color:#111111\\">Accordion Item title</summary><div class=\\"wp-block-unityblocks-accordion-item__content\\" style=\\"border-color:#111111\\"></div></details></div>
<!-- /wp:unityblocks/accordion-item -->"
`;

exports[`unityblocks/accordion-item should render with text color 1`] = `
"<!-- wp:unityblocks/accordion-item {\\"textColor\\":\\"primary\\"} -->
<div class=\\"wp-block-unityblocks-accordion-item\\"></div>
<!-- /wp:unityblocks/accordion-item -->"
`;
